# wge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
benchmarks/modsecurity/: CMakeLists.txt  main.cc
benchmarks/srsecurity/: CMakeLists.txt  main.cc
benchmarks/wge/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  config.h  engine.cc  engine.h  http_extractor.h  marker.cc  marker.h  parser.cc  parser.h  rule.cc  rule.h  transaction.cc  transaction.h
src/action/: CMakeLists.txt  action_base.h  actions_include.h  ctl.cc  ctl.h  initcol.cc  initcol.h  set_env.cc  set_env.h  set_rsc.cc  set_rsc.h  set_sid.cc  set_sid.h  set_uid.cc  set_uid.h  set_var.cc  set_var.h  t.cc  t.h
src/antlr4/: CMakeLists.txt  SecLang.g4  SecLangLexer.g4  SecLangParser.g4  parser.cc  parser.h  parser.inl  visitor.cc  visitor.h
src/antlr4/debug/: README.md  debug_lexer.sh  debug_parser.sh  input.txt
src/bytecode/: CMakeLists.txt  action_compiler.cc  action_compiler.h  compiler.cc  compiler.h  instruction.cc  instruction.h  instruction.inl  macro_compiler.cc  macro_compiler.h  op_code.h  operator_compiler.cc  operator_compiler.h  program.cc  program.h  register.h  transform_compiler.cc  transform_compiler.h  variable_compiler.cc  variable_compiler.h  virtual_machine.cc  virtual_machine.h
src/bytecode/compiler/: CMakeLists.txt  action_compiler.cc  action_compiler.h  action_travel_helper.h  macro_compiler.cc  macro_compiler.h  operator_compiler.cc  operator_compiler.h  operator_travel_helper.h  rule_compiler.cc  rule_compiler.h  transform_compiler.cc  transform_compiler.h  transform_travel_helper.h  variable_compiler.cc  variable_compiler.h  variable_travel_helper.h
src/bytecode/jit/: CMakeLists.txt
src/common/: CMakeLists.txt  assert.h  duration.h  empty_string.h  evaluate_result.h  file.cc  file.h  hash_table.hpp  log.cc  log.h  lru_cache.hpp  pcre.cc  pcre.h  sha1.cc  sha1.h  string.h  try.h  variant.h
src/common/hyperscan/: expression.cc  expression.h  hs_database.cc  hs_database.h  sanner.cc  scanner.h  scratch.h
src/common/literal_match/: scanner.cc
src/common/pcre/: pattern.cc  pattern.h  scanner.cc  scanner.h  scratch.cc  scratch.h
src/common/ragel/: json.cc  json.h  json.rl  multi_part.cc  multi_part.h  multi_part.rl  query_param.cc  query_param.h  query_param.rl  uri_parser.cc  xml.cc  (+4 more)
src/jit/: CMakeLists.txt  code_generator.cc  code_generator.h  llvm_wrapper.cc  llvm_wrapper.h
src/macro/: CMakeLists.txt  highest_severity.h  macro_base.cc  macro_base.h  macro_include.h  matched_var.h  matched_var_name.h  multi_macro.h  multipart_strict_error.h  remote_addr.h  reqbody_error_msg.h  rule.h  session.h  tx.h  user_id.h  variable_macro.h
src/operator/: CMakeLists.txt  begins_with.h  contains.h  contains_word.h  detect_sqli.cc  detect_sqli.h  detect_xss.cc  detect_xss.h  ends_with.h  eq.h  fuzzy_hash.h  ge.h  geo_lookup.h  gt.h  inspect_file.h  ip_match.h  ip_match_from_file.h  le.h  lt.h  no_match.h  operator_base.cc  operator_base.h  operator_include.h  pm.h  pm_from_file.cc  pm_from_file.h  rbl.h  rsub.h  rx.cc  rx.h  rx_global.h  streq.h  strmatch.h  unconditional_match.h  validate_byte_range.h  validate_dtd.h  validate_schema.h  validate_url_encoding.h  validate_utf8_encoding.h  verify_cc.h  (+5 more)
src/parser/: CMakeLists.txt  SecLang.g4  SecLangLexer.g4  SecLangParser.g4  parser.cc  parser.h  visitor.cc  visitor.h
src/persistent_storage/: CMakeLists.txt  collection.cc  collection.h  storage.cc  storage.h
src/rule/: rule_base.h
src/transformation/: CMakeLists.txt  base64_decode.cc  base64_decode.h  base64_decode_ext.h  base64_encode.h  cmd_line.cc  cmd_line.h  compress_whitespace.cc  compress_whitespace.h  css_decode.cc  css_decode.h  escape_seq_decode.cc  escape_seq_decode.h  hex_decode.cc  hex_decode.h  hex_encode.h  html_entity_decode.cc  html_entity_decode.h  js_decode.cc  js_decode.h  length.cc  length.h  lowercase.cc  lowercase.h  md5.h  normalise_path.cc  normalise_path.h  normalise_path_win.cc  normalise_path_win.h  normalize_path.cc  normalize_path.h  normalize_path_win.cc  normalize_path_win.h  parity_even_7bit.h  parity_odd_7bit.h  parity_zero_7bit.h  remove_comments.cc  remove_comments.h  remove_comments_char.cc  remove_comments_char.h  (+29 more)
src/variable/: CMakeLists.txt  args.h  args_combined_size.h  args_get.h  args_get_names.h  args_names.h  args_post.h  args_post_names.h  auth_type.h  collection_base.h  duration.h  env.h  evaluate_help.h  files.h  files_combined_size.h  files_names.h  files_sizes.h  files_tmp_content.h  files_tmpnames.h  full_name.h  full_request.h  full_request_length.h  geo.h  global.h  highest_severity.h  inbound_data_error.h  ip.h  matched_optree.h  matched_var.h  matched_var_name.h  matched_vars.h  matched_vars_names.h  matched_vptree.h  modsec_build.h  msc_pcre_limits_exceeded.h  multipart_boundary_quoted.h  multipart_boundary_whitespace.h  multipart_crlf_lf_lines.h  multipart_data_after.h  multipart_data_before.h  (+75 more)
test/: CMakeLists.txt
test/bytecode/: CMakeLists.txt  compiler_test.cc  virtual_machine_test.cc
test/common/: CMakeLists.txt  hyperscan_test.cc  json_test.cc  multi_part_test.cc  query_param_test.cc  xml_test.cc
test/crs/: CMakeLists.txt  crs.cc  crs_901.cc  integration.cc
test/integration/: 01_variable.cc  01_variable_test.data  02_rule_operator_test.cc  03_rule_action_test.cc  04_rule_evaluate_logic_test.cc  99_crs_test.cc  CMakeLists.txt  variable.cc
test/mock/: variable.h
test/parser/: CMakeLists.txt  audit_log_config_test.cc  engine_action_test.cc  engine_config_test.cc  include_test.cc  parser.cc  parser_test.cc  rule_action.cc  rule_action_parse_test.cc  rule_directive_test.cc  rule_operator.cc  rule_operator_parse_test.cc  rule_variable_parse_test.cc
test/rule/: action_evaluate_test.cc
test/test_data/: include_test.conf  include_test2.conf  pmf_test.data
test/transaction/: CMakeLists.txt  process_uri_test.cc  transaction_test.h
test/transformation/: CMakeLists.txt  cache_test.cc  transformation_test.cc
(+53 files in other folders)
